plugins {
    id 'java'
}

group = 'lucene.gosen'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // 既存の JAR ファイルを利用
    implementation files('lib/6.2.1/lucene-core-6.2.1.jar')

    // 圧縮ファイル対応
    implementation 'org.apache.commons:commons-compress:1.28.0'

    // Apache Parquet
    implementation 'org.apache.parquet:parquet-hadoop:1.17.0'
    implementation 'org.apache.hadoop:hadoop-common:3.4.2'
    implementation 'org.apache.hadoop:hadoop-mapreduce-client-core:3.4.2'

    // テストライブラリ
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

// 実行用タスク
tasks.register('runParser', JavaExec) {
    mainClass = 'lucene.gosen.wikipedia.PagesArticlesXmlParser'
    classpath = sourceSets.main.runtimeClasspath
    systemProperty 'file.encoding', 'UTF-8'
    // 引数が必要な場合は --args="old.jar new.jar" で渡せるように設定
}

tasks.register('runDownload', JavaExec) {
    mainClass = 'lucene.gosen.wikipedia.WikipediaDownloader'
    classpath = sourceSets.main.runtimeClasspath
    systemProperty 'file.encoding', 'UTF-8'
    // 引数が必要な場合は --args="url destination" で渡せるように設定
}

tasks.register('runDownloadJars', JavaExec) {
    mainClass = 'lucene.gosen.wikipedia.MavenJarDownloader'
    classpath = sourceSets.main.runtimeClasspath
    systemProperty 'file.encoding', 'UTF-8'
    // 引数が必要な場合は --args="version [destination-dir] [classifier]" で渡せるように設定
}

tasks.register('runWiki40bDownload', JavaExec) {
    mainClass = 'lucene.gosen.wikipedia.Wiki40bDownloader'
    classpath = sourceSets.main.runtimeClasspath
    systemProperty 'file.encoding', 'UTF-8'
    // 引数が必要な場合は --args="[destination-dir] [TRAIN|VALIDATION|TEST|ALL]" で渡せるように設定
}

tasks.register('runWiki40bParser', JavaExec) {
    mainClass = 'lucene.gosen.wikipedia.Wiki40bParquetParser'
    classpath = sourceSets.main.runtimeClasspath
    systemProperty 'file.encoding', 'UTF-8'
    // 引数が必要な場合は --args="old.jar new.jar [parquet-file]" で渡せるように設定
}
